<resources>
    <string name="app_name">WayUp</string>
    <string name="key_map">AIzaSyBu3_oacXB7GKoDwiPqisvLfzaUH3czjqk</string>

    <string name="header">Welcome to WayUp</string>
    <string name="company">Công ty</string>
    <string name="job">Việc làm</string>
    <string name="forum">Forum</string>
    <string name="profile">Thông tin</string>

    <string name="list_company">Danh sách công ty</string>
    <string name="list_job">Danh sách việc làm</string>
    <string name="information">Thông tin cá nhân</string>
    <string name="forums">Diễn đàn chia sẻ</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="register">ĐĂNG KÝ</string>
    <string name="back">THOÁT</string>
    <string name="save_pass">Lưu mật khẩu</string>
    <string name="forgot_pass">Quên mật khẩu</string>
    <string name="name">Họ và tên</string>
    <string name="re_pass">Nhập lại mật khẩu</string>
    <string name="apply">Ứng tuyển</string>
    <string name="save">Lưu</string>
    <string name="info">Thông tin</string>
    <string name="job_info">Thông tin công việc</string>
    <string name="company_info">Thông tin công ty</string>
    <string name="map">Bản đồ</string>
    <string name="comment">Đánh giá</string>
    <string name="email_error">Email không hợp lệ.</string>
    <string name="pass_error">Mật khẩu phải trên 6 ký tự.</string>
    <string name="name_error">Tên phải trên 6 ký tự.</string>
    <string name="insert_info">Vui lòng nhập đủ thông tin.</string>
    <string name="exists_email">Địa chỉ mail này đã được đăng ký.</string>
    <string name="register_success">Đăng ký thành công.</string>
    <string name="register_fail">Đăng ký thất bại.</string>
    <string name="email_pass_wrong">Email hoặc mật khẩu không đúng.</string>
    <string name="login_success">Đăng nhập thành công.</string>
    <string name="update_info">Bạn cần cập nhập thông tin sau lần đầu đăng nhập.</string>
    <string name="phone">Số điện thoại</string>
    <string name="gender">Giới tính</string>
    <string name="birthday">Ngày tháng năm sinh</string>
    <string name="skype">Địa chỉ Skype</string>
    <string name="address">Địa chỉ</string>
    <string name="education">Học vấn</string>
    <string name="exp">Kinh nghiệm</string>
    <string name="hard_skill">Kỹ năng</string>
    <string name="soft_skill_v2">Kỹ năng mềm</string>
    <string name="target">Mục tiêu nghề nghiệp</string>
    <string name="confirm">Xác nhận</string>
    <string name="input">Nhập</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="wait">Đang tải đữ liệu...</string>

    <string name="search">Tìm kiếm</string>
    <string name="map_drawer">Bản đồ</string>
    <string name="chart">Biểu đồ thống kê</string>
    <string name="favorite">Yêu thích</string>
    <string name="history">Lịch sử ứng tuyển</string>
    <string name="applied">Danh sách đã ứng tuyển</string>
    <string name="register_post">Đăng ký đăng tin</string>
    <string name="about">Thông tin</string>
    <string name="logout">Đăng xuất</string>

    <string name="search_province">Tìm kiếm theo thành phố</string>
    <string name="search_language">Tìm kiếm theo kỹ năng</string>
    <string name="search_level">Tìm kiếm theo trình độ</string>
    <string name="search_tag">Tìm kiếm theo công việc</string>
    <string name="list_empty">Danh sách rỗng!</string>
    <string name="circle_chart">Biểu đồ thống kê</string>

    <string name="chart_language">Biểu đồ thống kê tin tuyển dụng theo ngôn ngữ lập trình</string>
    <string name="chart_city">Biểu đồ thống kê tin tuyển dụng theo thành phố</string>
    <string name="chart_level">Biểu đồ thống kê tin tuyển dụng theo trình độ</string>

    <string name="posts">tin tuyển dụng</string>
    <string name="using_cv_uploaded">Sử dụng CV đã tải lên.</string>
    <string name="send_cv">Gửi hồ sơ ứng tuyển</string>
    <string name="insert_cv">Bạn cần tải một bản CV trong thông tin cá nhân.</string>
    <string name="input_ip">Nhập địa chỉ IP của bạn</string>
    <string name="ip_error">Địa chỉ IP không hợp lệ</string>
    <string name="select_cv">Chọn CV để tải lên</string>
    <string name="insert_cv_success">Cập nhật CV thành công.</string>
    <string name="insert_cv_fail">Cập nhật CV thất bại.</string>

    <string name="apply_fail">Ứng tuyển thất bại.</string>
    <string name="apply_success">Ứng tuyển thành công.</string>
    <string name="exists_apply">Bạn đã ứng tuyển công việc này.</string>

    <string name="exists_save">Tin này đã trong danh sách yêu thích của bạn.</string>
    <string name="save_success">Lưu tin thành công.</string>
    <string name="notification">Thông báo</string>
    <string name="register_notification">Đăng ký nhận thông báo tin tuyển dụng</string>
    <string name="register_notification_fail">Đăng ký nhận thông báo thất bại</string>
    <string name="register_notification_success">Đăng ký nhận thông báo thành công</string>
    <string name="remove_notification">Xóa</string>
    <string name="remove_notification_fail">Xóa thông báo thất bại</string>
    <string name="remove_notification_success">Xóa thông báo thành công</string>
    <string name="set_radius">Cài đặt bán kính tìm kiếm(m)</string>
    <string name="no_result">Không có tin tuyển dụng nào</string>
    <string name="no_marker">Bạn cần chọn một marker</string>
    <string name="errors">Lỗi không xác định</string>
    <string name="distance">Khoảng cách: </string>
    <string name="up_cv">Chọn file</string>
    <string name="profiles">Hồ sơ</string>
    <string name="max_cv">Bạn chỉ có thể tải lên tối đa 5 hồ sơ.</string>
    <string name="list_profile">Danh sách hồ sơ</string>
    <string name="list_applied">Danh sách đã ứng tuyển</string>
    <string name="waitting">Đang chờ</string>
    <string name="cancel">Đã hủy</string>
    <string name="close">Đã đóng</string>
    <string name="status">Trạng thái</string>
    <string name="cancel_success">Hủy thành công</string>
    <string name="cancel_fail">Hủy thất bại</string>
    <string name="info_profile">Thông tin cá nhân</string>
    <string name="info_company">Thông tin công ty</string>
    <string name="email_company">Email công ty</string>
    <string name="choose_employee_picture">Chọn ảnh thẻ nhân viên</string>
    <string name="exists_company">Đã tồn tại</string>
    <string name="create_company">Tạo mới</string>
    <string name="choose_company">Chọn công ty</string>
    <string name="name_company">Tên công ty</string>
    <string name="type_company">Loại hình công ty</string>
    <string name="member_company">Số lượng thành viên</string>
    <string name="country_company">Quốc gia hoạt động</string>
    <string name="time_work_company">Thời gian làm việc</string>
    <string name="address_company">Địa chỉ</string>
    <string name="contact_company">Liên hệ</string>
    <string name="desc_company">Thông tin chi tiết</string>
    <string name="ot_company">Làm thêm giờ</string>
    <string name="slogan_company">Slogan của công ty</string>
    <string name="logo_company">Chọn logo công ty</string>
    <string name="image_company">Chọn ảnh bìa công ty</string>
    <string name="cancel_ver1">Hủy bỏ</string>
    <string name="register_hr_success">Đăng ký thành công, tài khoản của bạn đã được chuyển sang quyền đăng tin, hệ thống sẽ đăng xuất sau 3 giây.</string>
    <string name="register_hr_fail">Đăng ký thất bại.</string>
    <string name="code">Nhập mã xác nhận...</string>
    <string name="code_error">Mã không hợp lệ</string>
    <string name="permission_denied">Quyền truy cập bị từ chối</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_creative">Thông tin nhà phát triển</string>
    <string name="locked">Tài khoản của bạn đã bị khóa.</string>
    <string name="insert_mail">Vui lòng nhập địa chỉ email của bạn.</string>
    <string name="email_wrong">Địa chỉ email không tồn tại</string>
    <string name="forgot_pass_done">Mật khẩu đã được gửi cho bạn qua email</string>
    <string name="max_apply">Bạn chỉ được ứng tuyển tối đa 5 tin.</string>
    <string name="set_ip">Cài đặt địa chỉ IP</string>
</resources>
