<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LoginFragment">


    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_logo" />

    <EditText
        android:id="@+id/edtEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoLogin"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_background"
        android:drawableLeft="@drawable/ic_mail_black_24dp"
        android:drawablePadding="7dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp" />

    <EditText
        android:id="@+id/edtPassLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtEmailLogin"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_background"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="7dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp" />


    <LinearLayout
        android:id="@+id/lnSavePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPassLogin"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/cbSavePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/white"
            android:text="@string/save_pass"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lnSavePass"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvForgotPass"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/forgot_pass"
        android:textColor="@color/white" />

</RelativeLayout>