<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.wayup.view.CusBoldTextView
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:padding="10dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            style="?android:attr/textAppearanceMedium"
            android:text="@string/register_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:id="@+id/spinnerNoti"
            android:background="@drawable/spinner_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>

        <EditText
            android:id="@+id/edtEmailNoti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logoLogin"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/spinner_background"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_weight="1"
                android:id="@+id/btnRegisterNoti"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/lnSavePass"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_button"
                android:text="@string/confirm"
                android:textColor="@color/white" />
            <Button
                android:layout_weight="1"
                android:id="@+id/btnDeleteNoti"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/lnSavePass"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/custom_button_ver2"
                android:text="@string/remove_notification"
                android:textColor="@color/white" />
        </LinearLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>